# llm_counterfactuals

./: config.py  part_1.py  part_2.py  pyproject.toml  truth_direction.ipynb  utils.py
geometry_of_truth/: config.ini  generate_acts.py  visualization_utils.py
lasso/: config.py  evaluation.py  experiments.ipynb  pipeline.py  run_pipeline_debug_output.txt  sst2_counterfactual_results.csv
