[project]
name = "llm-counterfactuals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "transformer-lens>=2.15.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "ruff>=0.9.8",
]

[tool.pyright]
reportUnknownMemberType = false
